# CLox

./: .gitignore  CMakeLists.txt  CMakePresets.json  clang-format.py  vcpkg.json
.github/workflows/: build.yml  clang-format.yml  cmake.yml
src/: common.c  common.h  main.c
src/compiler/: compiler.c  compiler.h  scanner.c  scanner.h
src/debugger/: debugger.c  debugger.h
src/internals/: chunks.c  chunks.h  memory.c  memory.h  value.c  value.h
src/vm/: vm.c  vm.h
